# hs-snakelike

./: Display.hs  GenerateRead.hs  Makefile  Model.hs  README.md  SdlMain.hs  c_main.c  snake.cabal
UI/: Game.hi  Game.hs  Keys.hs  Menu.hi  Menu.hs
